gccida/c1/int_mode_for_mode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/stor-layout.c:727:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  int_mode_for_mode( machine_mode mode) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/stor-layout.c:727:34: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  int_mode_for_mode( machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/stor-layout.c:731:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/stor-layout.c:734:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v1 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_mode_for_mode/src/obj/stor-layout.o] Error 1
